pi-node-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpi-node-sample
  namespace: test
  labels:
    app: rpi-node-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rpi-node-sample
  template:
    metadata:
      labels:
        app: rpi-node-sample
    spec:
      containers:
      - name: rpi-node-sample
        image: blueguse/rpi-node-sample:0.0.3
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
