pi-node-app/manifests/ingress-80.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-web-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: pi.spunkyrocket.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi-node-sample
            port:
              number: 8080
