pi-node-app/manifests/ingress-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-scheme
  namespace: test
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-web-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: test-https-redirect-scheme@kubernetescrd
spec:
  rules:
  - host: pi.spunkyrocket.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi-node-sample
            port:
              number: 8080
