pi-node-app/manifests/ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ingress
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - pi.spunkyrocket.com
    secretName: pi-spunkyrocket-tls
  rules:
  - host: pi.spunkyrocket.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rpi-node-sample
            port:
              number: 8080
